--- a/dom-parser.html
+++ b/dom-parser.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>DOMParser Example</title>
+    <title>DOMParser</title>
     <meta charset="UTF-8">
 
     <script src="dom-parser.js"></script>
