--- a/dom-parser.html
+++ b/dom-parser.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <h3>DOMParser example</h3>
+    <h3>DOMParser</h3>
     <a href="">Reset</a> <br><br>
 
     <button onclick = "clickHandler(event)">Click Me</button>
