--- a/dom-parser.html
+++ b/dom-parser.html
@@ -15,9 +15,9 @@
 <body>
 
     <h3>DOMParser</h3>
-    <a href="">Reset</a> <br><br>
+    <a href="">Remove all</a> <br><br>
 
-    <button onclick = "clickHandler(event)">Click Me</button>
+    <button onclick = "clickHandler(event)">Show the result</button>
     <br><br>
 
     <textarea id="textarea-log" rows="15" style="width:100%;"></textarea>
