--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
 <tr><td> Name</td>   
 <td><input type="text" placeholder="Enter your name" oninput="validate_name()" id="n1"></td></tr> 
 <tr><td>Username </td>  
-<td><input type="text" placeholder="Enter your username" onblur="validate_username()" id="u1"></td></tr>   
+<td><input type="text" placeholder="Enter last name" onblur="validate_username()" id="u1"></td></tr>   
 <tr><td>Email </td>  
 <td><input type="text" placeholder="Enter your email id" onblur="validate_email()" id="e1"></td></tr>  
 <tr><td> Set Password</td>  
